--- a/templates/index.html
+++ b/templates/index.html
@@ -1702,7 +1702,8 @@
     }
     
     // 获取所有点ACCEPT的卖家telegram_id
-    const preferredSellerIds = activeSellersData.map(s => s.telegram_id).join(',');
+    const preferredSellerIds = activeSellersData.map(s => s.telegram_id).filter(Boolean).join(',');
+    console.log("卖家IDs:", preferredSellerIds, "活跃卖家数据:", JSON.stringify(activeSellersData));
     if (!preferredSellerIds) {
       showAlert('没有卖家响应ACCEPT，无法提交订单！', 'error');
       return;
